--- a/git/disputils/commit/6e03e58ae2f972f35eefabacd6db5cce82c18abb.html
+++ b/git/disputils/commit/6e03e58ae2f972f35eefabacd6db5cce82c18abb.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Content-Language" content="en" />
-<title>.gitignore - disputils - wmutils/xrandr powered multimonitor display utils
+<title>Merge branch &apos;master&apos; of yuuko:/srv/repositories/disputils - disputils - wmutils/xrandr powered multimonitor display utils
 </title>
 <link rel="icon" type="image/png" href="../favicon.png" />
 <link rel="alternate" type="application/atom+xml" title="disputils.git Atom Feed" href="../atom.xml" />
@@ -15,19 +15,16 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .gitignore (22B)</p><hr/><table id="blob"><tr><td class="num"><pre>
-<a href="#l1" id="l1">1</a>
-<a href="#l2" id="l2">2</a>
-<a href="#l3" id="l3">3</a>
-<a href="#l4" id="l4">4</a>
-<a href="#l5" id="l5">5</a>
-</pre></td><td><pre>
-*.o
-lsd
-pfd
-ppd
-dattr
-</pre></td></tr></table>
+<pre><b>commit</b> <a href="../commit/6e03e58ae2f972f35eefabacd6db5cce82c18abb.html">6e03e58ae2f972f35eefabacd6db5cce82c18abb</a>
+<b>parent</b> <a href="../commit/1f076f184045c05db5317542804d4656d58f8eff.html">1f076f184045c05db5317542804d4656d58f8eff</a>
+<b>Author:</b> ix &lt;<a href="mailto:arcetera@openmailbox.org">arcetera@openmailbox.org</a>&gt;
+<b>Date:</b>   Sun Apr 17 17:58:15 2016
+
+Merge branch &apos;master&apos; of yuuko:/srv/repositories/disputils
+
+<b>Diffstat:</b>
+ 0 files changed, 0 insertions(+), 0 deletions(-)
+<hr/></pre>
 </div>
 </body>
 </html>
