--- a/git/disputils/files.html
+++ b/git/disputils/files.html
@@ -18,23 +18,25 @@
 <table id="files"><thead>
 <tr><td>Mode</td><td>Name</td><td class="num">Size</td></tr>
 </thead><tbody>
-<tr><td>-rw-r--r--</td><td><a href="file/.gitignore.html">.gitignore</a></td><td class="num">4L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/.gitignore.html">.gitignore</a></td><td class="num">5L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/LICENSE.html">LICENSE</a></td><td class="num">13L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/Makefile.html">Makefile</a></td><td class="num">41L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/README.html">README</a></td><td class="num">43L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/arg.h.html">arg.h</a></td><td class="num">63L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/config.mk.html">config.mk</a></td><td class="num">8L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/config.mk.openbsd.html">config.mk.openbsd</a></td><td class="num">8L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/dattr.c.html">dattr.c</a></td><td class="num">92L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/lsd.c.html">lsd.c</a></td><td class="num">51L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/man/Makefile.html">man/Makefile</a></td><td class="num">16L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/dattr.c.html">dattr.c</a></td><td class="num">91L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/lsd.c.html">lsd.c</a></td><td class="num">50L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/man/Makefile.html">man/Makefile</a></td><td class="num">19L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/man/dattr.1.html">man/dattr.1</a></td><td class="num">56L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/man/lsd.1.html">man/lsd.1</a></td><td class="num">16L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/man/pfd.1.html">man/pfd.1</a></td><td class="num">16L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/pfd.c.html">pfd.c</a></td><td class="num">93L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/randr.c.html">randr.c</a></td><td class="num">111L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/randr.h.html">randr.h</a></td><td class="num">34L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/util.c.html">util.c</a></td><td class="num">107L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/man/ppd.1.html">man/ppd.1</a></td><td class="num">16L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/pfd.c.html">pfd.c</a></td><td class="num">92L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/ppd.c.html">ppd.c</a></td><td class="num">36L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/randr.c.html">randr.c</a></td><td class="num">129L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/randr.h.html">randr.h</a></td><td class="num">39L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/util.c.html">util.c</a></td><td class="num">106L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/util.h.html">util.h</a></td><td class="num">19L</td></tr>
 </tbody></table></div>
 </body>
