--- a/git/disputils/log.html
+++ b/git/disputils/log.html
@@ -18,6 +18,15 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-04-18 01:31</td><td><a href="commit/244ee870ff21c24c807c265d26fed86cbc8c9d6c.html">fix license</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 18:19</td><td><a href="commit/3e0e0ab415c5a764a751798fce5a3282fe60f6c2.html">docs: fix man makefile</a></td><td>ix</td><td class="num">1</td><td class="num">+3</td><td class="num">-0</td></tr>
+<tr><td>2016-04-17 18:19</td><td><a href="commit/b61e681e6ad489fb9045b19a7a75e864aeddacac.html">docs: fix dattr manpage, add ppd manpage</a></td><td>ix</td><td class="num">2</td><td class="num">+23</td><td class="num">-7</td></tr>
+<tr><td>2016-04-17 17:58</td><td><a href="commit/6e03e58ae2f972f35eefabacd6db5cce82c18abb.html">Merge branch &apos;master&apos; of yuuko:/srv/repositories/disputils</a></td><td>ix</td><td class="num">0</td><td class="num">+0</td><td class="num">-0</td></tr>
+<tr><td>2016-04-17 17:49</td><td><a href="commit/1f076f184045c05db5317542804d4656d58f8eff.html">fix: remove .openbsd</a></td><td>ix</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 17:14</td><td><a href="commit/ab8bff25a3cfff18ce268539a31252ce21cfd299.html">fix: remove junk</a></td><td>ix</td><td class="num">2</td><td class="num">+1</td><td class="num">-0</td></tr>
+<tr><td>2016-04-17 17:14</td><td><a href="commit/467c0930cfb37287919d97feee4cf01b26e2301a.html">style: use flags</a></td><td>ix</td><td class="num">3</td><td class="num">+19</td><td class="num">-19</td></tr>
+<tr><td>2016-04-17 16:54</td><td><a href="commit/968935349ab8df30e6d5f5297642d173a01a721a.html">style: header orders</a></td><td>ix</td><td class="num">6</td><td class="num">+4</td><td class="num">-10</td></tr>
+<tr><td>2016-04-17 23:37</td><td><a href="commit/2faa7562f6c0cb6d33611f523f83fb90c3c7679e.html">add ppd: print primary output</a></td><td>Tudor</td><td class="num">4</td><td class="num">+62</td><td class="num">-1</td></tr>
 <tr><td>2016-04-17 22:40</td><td><a href="commit/0ef9d82c260f6eda7fec61ca3beb79cc3e28bf76.html">clean it up</a></td><td>Tudor</td><td class="num">6</td><td class="num">+11</td><td class="num">-11</td></tr>
 <tr><td>2016-04-17 22:35</td><td><a href="commit/8cc5d210612a5fd3706376e43c5737b067586232.html">fix dattr usage</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
 <tr><td>2016-04-17 22:34</td><td><a href="commit/e09ae7c417e0720eb593b78504cf0a3647f9af61.html">remove statics</a></td><td>Tudor</td><td class="num">3</td><td class="num">+9</td><td class="num">-9</td></tr>
