--- a/git/disputils/file/man/dattr.1.html
+++ b/git/disputils/file/man/dattr.1.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/README.html">README</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> dattr.1 (810B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> dattr.1 (817B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -82,7 +82,7 @@
 .Nd get display attributes
 .Sh SYNOPSIS
 .Nm dattr
-.Op Cm whxy
+.Op Cm -whxy
 .Ar display_id
 .Sh DESCRIPTION
 .Nm
@@ -96,21 +96,21 @@ What information is presented depends on the commands given to
 The queried arguments are printed in the order they are requested,
 spearated by a space.
 .Bl -tag -display_idth Ds
-.It Cm w
+.It Cm -w
 Print
 .Ar display_id Ns \(cqs width.
-.It Cm h
+.It Cm -h
 Print
 .Ar display_id Ns \(cqs
 height.
-.It Cm x
+.It Cm -x
 Print
 .Ar display_id Ns \(cqs
 .EQ
 x
 .EN
 offset.
-.It Cm y
+.It Cm -y
 Print
 .Ar display_id Ns \(cqs
 .EQ
@@ -124,10 +124,10 @@ acts on the X display specified by the
 .Ev DISPLAY
 variable.
 .Sh EXAMPLES
-.Dl $ dattr whxy LVDS-1
+.Dl $ dattr -whxy LVDS-1
 .Dl 1600 900 1920 0
 .Pp
-.Dl $ dattr wh DP-1
+.Dl $ dattr -wh DP-1
 .Dl 1920 1080
 </pre></td></tr></table>
 </div>
