--- a/git/disputils/file/randr.c.html
+++ b/git/disputils/file/randr.c.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> randr.c (3624B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> randr.c (4147B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -127,11 +127,31 @@
 <a href="#l109" id="l109">109</a>
 <a href="#l110" id="l110">110</a>
 <a href="#l111" id="l111">111</a>
+<a href="#l112" id="l112">112</a>
+<a href="#l113" id="l113">113</a>
+<a href="#l114" id="l114">114</a>
+<a href="#l115" id="l115">115</a>
+<a href="#l116" id="l116">116</a>
+<a href="#l117" id="l117">117</a>
+<a href="#l118" id="l118">118</a>
+<a href="#l119" id="l119">119</a>
+<a href="#l120" id="l120">120</a>
+<a href="#l121" id="l121">121</a>
+<a href="#l122" id="l122">122</a>
+<a href="#l123" id="l123">123</a>
+<a href="#l124" id="l124">124</a>
+<a href="#l125" id="l125">125</a>
+<a href="#l126" id="l126">126</a>
+<a href="#l127" id="l127">127</a>
+<a href="#l128" id="l128">128</a>
+<a href="#l129" id="l129">129</a>
 </pre></td><td><pre>
 /* disputils randr.c 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt;
  * ix &lt;arcetera@openmailbox.org
  */
 
+#include &lt;xcb/randr.h&gt;
+#include &quot;util.h&quot;
 #include &quot;randr.h&quot;
 
 int
@@ -239,6 +259,22 @@ get_window_geometry(xcb_connection_t *conn, xcb_window_t window)
     return get_geometry_reply;
 }
 
+xcb_randr_get_output_primary_reply_t*
+get_primary_output(xcb_connection_t *conn)
+{ /* returns the primary output (display) */
+    xcb_screen_t *scrn;
+    xcb_window_t root;
+    xcb_randr_get_output_primary_cookie_t c;
+    xcb_randr_get_output_primary_reply_t *primary_output;
+
+    get_screen(conn, &amp;scrn);
+    root = scrn-&gt;root;
+
+    c = xcb_randr_get_output_primary(conn, root);
+    primary_output = xcb_randr_get_output_primary_reply(conn, c, NULL);
+
+    return primary_output;
+}
 </pre></td></tr></table>
 </div>
 </body>
